# EnergyEstimator

./: CMakeLists.txt  README.md
samples/input/: input.csv
samples/output/: energy_consumption.csv
src/: csv_generator.cpp  csv_generator.hpp  csv_read.cpp  csv_read.hpp  energy_estimate.cpp  energy_estimate.hpp  linear_interpolation.cpp  linear_interpolation.hpp  main.cpp  matplotlibcpp.h  plot.cpp  plot.hpp
